--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,5 +17,7 @@
     {% include 'app_header.html.twig' %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        
+        {{ encore_entry_script_tags('global') }}
     </body>
 </html>
