--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -23,11 +23,22 @@
                                             <span>| Priorité :</span>
                                             <span class="font-weight-bold badge badge-light" style="font-size: 110%;">{{ issue.priority |capitalize }}</span>
                                             <span>| Statut :</span>
-                                            <span class="font-weight-bold {{ getClassForStatus(issue.status)}} badge" style="font-size: 110%;">{{ issue.status |capitalize }}
+                                            <span class="font-weight-bold {{ getClassForStatus(issue.status)}} badge" style="font-size: 110%;">
                                             {% if issue.status  == "doing" %}
-                                            {{ issue.getProportionOfDone() }}
+                                                {{ issue.getProportionOfDoing() }}
                                             {% endif %}
+                                            {{ issue.status |capitalize }}
                                             </span>
+                                            {% if issue.status  == "doing" %}
+                                            <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() }} Done
+                                            </span>
+                                            {% endif %}
+                                            {% if issue.getSprint() is not null %}
+                                            <span>| </span>
+                                            <a title="Voir les détails du sprint" href="{{ path('sprintDetails', {'id_project': project.id,'id_sprint': issue.getSprint().getId()}) }}">
+                                                <span class="font-weight-bold badge badge-light" style="font-size: 110%;">Sprint :{{ issue.getSprint().getNumber() |capitalize }}</span>
+                                            </a>
+                                            {% endif %}
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
@@ -41,7 +52,7 @@
                                     <h3>Veuillez confirmer la suppression</h3>
                                 {% endblock %}
                                 {% block body %}
-                                    <p>Êtes-vous sûr(e) de vouloir supprimer l'issue {{ issue.number }}</p>
+                                    <p>Êtes-vous sûr(e) de vouloir supprimer l'issue {{ issue.number }}?<br/>Les tâches et sprints associées seront déliées.</p>
                                 {% endblock %}
                                 {% block footer %}
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
