--- a/templates/test/test_list.html.twig
+++ b/templates/test/test_list.html.twig
@@ -16,8 +16,10 @@
                                     <div class="col-md-6 col-lg-8">
                                         <div class="font-weight-bold">{{ test.name }} - {{ test.description }}</div>
                                         <div class="text-muted small">
-                                            <span>| state :</span>
-                                            <span class="font-weight-bold">{{ test.state }}</span>
+                                            <span>Statut :</span>
+                                            <span class="font-weight-bold {{ getClassForTestStatus(test.state)}} badge" style="font-size: 110%;">
+                                            {{ test.state | capitalize }}
+                                            </span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
