[Bugfix] COrrection affichage des releases

--- a/templates/release/release_list.html.twig
+++ b/templates/release/release_list.html.twig
@@ -17,14 +17,16 @@
                                         <div class="font-weight-bold">{{ release.number}} - {{ release.description }}</div>
                                         <div class="text-muted small">
                                             <span>Date:</span>
-                                            <span class="font-weight-bold">{{ release.date.format("d/m/Y") }}</span>
+                                            <span class="font-weight-bold">{{ release.date.format("d/m/Y") }} | </span>
+                                            <a title="Accéder au lien de la release" href="{{(release.link)}}" target="_blank">
+                                                <span class="green font-weight-bold badge badge-light" style="font-size: 110%;">Lien de la release</span>
+                                            </a>
                                         </div>
-                                        <a class="font-weight-bold" href="{{(release.link)}}">Le lien de la release</a>
+                                    </div>    
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
-                                            <a class="btn btn-primary my-auto mr-1" href="{{ path('editRelease', {'id_project': project.id, 'id_release' : release.id}) }}">Editer</a>
+                                        <a class="btn btn-primary my-auto mr-1" href="{{ path('editRelease', {'id_project': project.id, 'id_release' : release.id}) }}">Editer</a>
                                         <button class="btn btn-danger my-auto ml-1" data-toggle="modal" data-target="#release-delete-confirm{{ index }}">Supprimer</button>
                                     </div>
-                                </div>
                                 </div>
                             </li>
                             {% embed 'components/_modal.html.twig' with {'modalId': "release-delete-confirm#{index}"} %}
@@ -32,7 +34,7 @@
                                     <h3>Veuillez confirmer la suppression</h3>
                                 {% endblock %}
                                 {% block body %}
-                                    <p>Êtes-vous sûr(e) de vouloir supprimer le release {{ release.number }}</p>
+                                    <p>Êtes-vous sûr(e) de vouloir supprimer le release {{ release.number }}?</p>
                                 {% endblock %}
                                 {% block footer %}
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
