--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -24,7 +24,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
-                                            <a class="btn btn-success my-auto mr-1" href="{{ path('sprintDetails', {'id_project': project.id,'id_sprint':sprint.id}) }}">Taches</a>
+                                            <a class="btn btn-success my-auto mr-1" href="{{ path('sprintDetails', {'id_project': project.id,'id_sprint':sprint.id}) }}">Tâches</a>
                                             <a class="btn btn-primary my-auto mr-1" href="{{ path('editSprint', {'id_project': project.id, 'id_sprint' : sprint.id}) }}">Editer</a>
                                             <button class="btn btn-danger my-auto ml-1" data-toggle="modal" data-target="#sprint-delete-confirm">Supprimer</button>
                                         </div>
