--- a/templates/issue/issue_form.html.twig
+++ b/templates/issue/issue_form.html.twig
@@ -14,7 +14,7 @@
                 {{ form_row(form.description) }}
                 {{ form_row(form.difficulty) }}
                 {{ form_row(form.priority,{'label': 'Priorité'},{ 'separator': '----------' }) }}
-                {{ form_row(form.sprint) }}
+                {{ form_row(form.sprints) }}
                 <button type="submit" class="btn btn-primary">Créer l'issue</button>
                 {{ form_end(form) }}
             </div>
