--- a/templates/issue/issue_details.html.twig
+++ b/templates/issue/issue_details.html.twig
@@ -31,12 +31,12 @@
                     <span class="font-weight-bold {{ getClassForStatus("done")}} badge" style="font-size: 110%;">{{ issue.getProportionOfDone() }} Done
                     </span>
                     {% endif %}
-                    {% if issue.getSprint() is not null %}
+                    {% for sprint in issue.getSprints() %}
                     <span>| </span>
-                    <a title="Voir les détails du sprint" href="{{ path('sprintDetails', {'id_project': project.id,'id_sprint': issue.getSprint().getId()}) }}">
-                        <span class="font-weight-bold badge badge-light" style="font-size: 110%;">Sprint :{{ issue.getSprint().getNumber() |capitalize }}</span>
+                    <a title="Voir les détails du sprint" href="{{ path('sprintDetails', {'id_project': project.id,'id_sprint': sprint.getId()}) }}">
+                        <span class="font-weight-bold badge badge-light" style="font-size: 110%;">Sprint :{{ sprint.getNumber() |capitalize }}</span>
                     </a>
-                    {% endif %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
